--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
+    "redux-persist": "^6.0.0",
     "sass": "^1.49.0",
     "webfontloader": "^1.6.28"
   },
